2007-12-10  Andreas Kirschbaum

	* Scroll magic map when character moves.

	* Make sure all text in the command input field is visible.
	(default)

	* Move inventory and status dialogs to not overlap. (ragnorok)

2007-12-09  Andreas Kirschbaum

	* Add new skin 'ragnorok'.

	* Implement 'dialog_hide' skill command to hide dialogs in certain
	gui states.

	* Add support for transparent dialogs.

	* Implement 'log_color' skin command to override default color
	mapping in 'log' elements. Fix default color mapping.

	* Add "container close" button when a container is open.

	* Implement 'label_multi' skin command that display a multi-line
	label.

	* Extend the syntax in skin files for multi-line text strings.

	* Implement per-dialog key bindings; use it in meta server dialog.

2007-12-08  Andreas Kirschbaum

	* Implement cursor for text input fields.

	* Add format specifier to 'meta_element' skin command.

	* Implement 'dialog_state' skin command to record the visibility
	of dialogs.

	* Remove 'label_picture' skin command; add 'label_html' skin
	command to display HTML content; change 'label_text' to not
	interpret HTML content.

	* Implement "low food" warning: displays a symbol above the player
	if food drops below 100.

	* Add support for checkbox gui elements.
	- Add client-side command (set <option> <state>) to set an option
	  manually.
	- Implement skin commands 'def checkbox', 'def checkbox_option',
	  and 'checkbox'.

2007-12-07  Andreas Kirschbaum

	* Make shift+numpad direction keys work.

	* Make ENTER and SPACE select the default action in dialogs. For
	books "close dialog", in quit dialog "disconnect", in metaserver
	and start dialogs "connect".

	* Generalize spellbelt into shortcuts: a shortcut can hold either
	a spell or a command.

	* Add open/close button to log window.

2007-12-06  Andreas Kirschbaum

	* Implement client-side command 'exec' to execute skin command
	lists. Allow to execute client-side commands through key bindings.
