@@ -1,5 +1,5 @@
 
-dialog border                250 250 200 108 Setup
+dialog border                250 250 200 128 Setup
 dialog_state plain_dialog_setup false Whether the setup dialog is open.
 dialog_hide START META LOGIN
 button button_close          180   4  16 16 close_up close_down command_setup
@@ -17,7 +17,8 @@ button button_close          180   4  16 16 close_up close_down command_setup
 # Preferences group
 label_text label_preferences  10  40 180 16 font_title BLACK Preferences:
 checkbox checkbox_low_food    10  60 180 16 lowfood Low food warning
-checkbox checkbox_hitpoints   10  80 180 16 hitpoints Hitpoint indicator
+checkbox checkbox_poisoned    10  80 180 16 poisoned Poisoned indicator
+checkbox checkbox_hitpoints   10 100 180 16 hitpoints Hitpoint indicator
 
 ## Popups group
 #label_text label_popups       10 110 180 16 font_title BLACK Popup windows:
