@@ -1,5 +1,8 @@
 2007-12-10  Andreas Kirschbaum
 
+	* Implement "poisoned" warning: displays a symbol above the player
+	while being poisoned.
+
 	* Scroll magic map when character moves.
 
 	* Make sure all text in the command input field is visible.
